# BrowserIR

./: .gitignore  .mcp.json  AGENTS.md  Dockerfile  LICENSE  README.md  bir-data.db  bir-graph.db  opencode.json  package-lock.json  package.json  setup-graph.ts  start-graph.ts  tsconfig.json  tsup.config.ts
.claude-plugin/: marketplace.json  plugin.json
.cursor/: mcp.json
.cursor/rules/: bir.mdc
.github/workflows/: ci.yml
.opencode/: plugin.json
.opencode/agents/: browserir.md
.opencode/plugins/: browserir.js
dashboard/: package-lock.json  package.json
dashboard/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
dashboard/src/: app.css  app.html
hooks/: run-hook.cmd
sdk/python/: pyproject.toml
sdk/python/src/bir/: __init__.py  client.py
sdk/python/tests/: test_client.py
sdk/ts/: package-lock.json  package.json  tsconfig.json
skills/: SKILL.md  skill.json
skills/bir/: SKILL.md  skill.json
src/: index.ts
src/browserIR/: session.ts
src/config/: index.ts
src/daemon/: dashboard.ts  engines.ts  server.ts  session.ts  transport.ts  websocket.ts
src/db/: index.ts  migrations.ts  schema.ts
src/engines/: agent.ts  auto-indexer.ts  console-capture.ts  content-extractor.ts  content-types.ts  crawler-scheduler.ts  crawler.ts  diff.ts  doc-parser.ts  dom-extractor.ts  element-highlight.ts  embedding-engine.ts  event.ts  exa-search.ts  explain.ts  failure-analyzer.ts  file-manager.ts  flow-detector.ts  flow-templates.ts  flow.ts  graph-visualization.ts  input-manager.ts  intent-classifier.ts  knowledge.ts  memory-learner.ts  memory.ts  planner.ts  (+17 more)
(+153 files in other folders)
