[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bir"
version = "0.1.0"
description = "Python SDK for Browser Intelligence Runtime"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23"
]
